--- a/css/speakers-and-video.css
+++ b/css/speakers-and-video.css
@@ -29,21 +29,103 @@ display: grid;
     display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         grid-gap: 5px;
-        justify-content: space-between;
-   
+        justify-content: space-between;  
 }
-
-
-
-
 .video{
     background-image: url(../img/girl3.png);
     background-size: cover;
     background-position: center;
-    height: 703px;  
+    height: 100vh;  
 }
 .play_button{
     width: 60px;
     height: 60px;
     border-radius: 50%;
 }
+.mega-sale{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.countdown-speakers{
+    background-image: url(../img/Bose_speaker.webp);
+    background-size: cover;
+    height: 75vh;
+    position: relative;
+}
+.countdown-speakers-title{
+position: absolute;
+  text-align: center;
+  padding-top: 10px;
+  padding-left: 10px;
+  font-family:  Heebo, sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  color:rgb(235,81,18);
+}
+.countdown-speakers-product  {
+    padding-top: 70px;
+    padding-left: 10px;
+    font-family: Heebo, sans-serif;
+    font-weight: 1000;
+    font-size: 50px;
+    color: black;
+    position: relative;
+}
+.countdown-speakers-product-model{
+    padding-left: 10px;
+    font-family: Heebo, sans-serif;
+    font-weight: 1000;
+    font-size: 50px;
+    color: black;
+    position: relative;
+}
+.Bose-speaker-price-old {
+    text-decoration: line-through;
+    padding-top: 50px;
+    padding-left: 30px;
+    padding-right: 0px;
+    font-family: Heebo, sans-serif;
+    font-weight: 1000;
+    font-size: 50px;
+    color: rgba(83,83,83,0.45);
+    position: relative;
+  }
+  
+  .Bose-speaker-price-new {
+    margin-top: -150px;
+    padding-left: 180px;
+    font-family: Heebo, sans-serif;
+    font-weight: 1000;
+    font-size: 100px;
+    color: rgb(235,81,18);
+    position: relative;
+  }
+  
+  .countdown_speakers_sale {
+    display: flex;
+    margin: 30px;
+    margin-top: -50px;
+    justify-content: center;
+  }
+  
+  .countdown_sale {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    font-family: sans-serif;
+    padding-top: 30px;
+  }
+  
+  .day,
+  .hour,
+  .minute,
+  .second {
+    font-weight: bold;
+    font-size: 40px;
+  }
+  .redaout {
+    color: rgba(83,83,83,0.45);
+    font-size: 30px;
+  }
