--- a/css/speakers-and-video.css
+++ b/css/speakers-and-video.css
@@ -1,7 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700;&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;700;900&display=swap");
 
-
+.speakers-title{
+  text-align: center;
+  color: rgb(47,47,47);
+  font-size: 60px;
+  font-weight: 900;
+}
+.speakers p{
+  text-align: center;
+}
 .video-header{
     color:white;
     font-size: 60px;
@@ -9,7 +17,7 @@
     text-align: left;
     
 }
-.Speakers img.logo{
+.speakers img.logo{
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -24,12 +32,43 @@ display: grid;
     grid-template-columns: 1fr 10fr 1fr;
     align-items: center;
     justify-content: space-around;
+    margin: auto;
 }
 .products{
     display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         grid-gap: 5px;
-        justify-content: space-between;  
+        justify-content: space-between;
+        margin: auto;  
+}
+.product_card{
+  border: 2px solid #f2f2f2;
+}
+.text_link{
+  text-decoration: none;
+  color: #2a2a2a;
+  font-size: 17px;
+  font-weight: 600;
+  margin-left: 15px;
+}
+.speakers-price{
+  font-weight: 600;
+  font-size: 16px;
+  white-space: nowrap;
+  margin-left: 8px;
+}
+.speakers-slide-prev,
+.speakers-slide-next {
+  border-radius: 50%;
+  background-color: #4a4a4a;
+  margin: auto;
+  padding: 1px 1px;
+}
+.speakers-slide-next:hover,
+.speakers-slide-prev:hover {
+  border-radius: 50%;
+  background-color: #2a2a2a;
+  margin: auto;
 }
 .video{
     background-image: url(../img/girl3.png);
