--- a/css/speakers-and-video.css
+++ b/css/speakers-and-video.css
@@ -6,6 +6,7 @@
   color: rgb(47,47,47);
   font-size: 60px;
   font-weight: 900;
+  margin-top: 10px;
 }
 .speakers p{
   text-align: center;
@@ -157,14 +158,14 @@ position: absolute;
     padding-top: 30px;
   }
   
-  .day,
-  .hour,
-  .minute,
-  .second {
+  .countdown_speakers_day,
+  .countdown_speakers_hour,
+  .countdown_speakers_minute,
+  .countdown_speakers_second {
     font-weight: bold;
     font-size: 40px;
   }
-  .redaout {
+  .countdown_speakers_date {
     color: rgba(83,83,83,0.45);
     font-size: 30px;
   }
