--- a/css/header-section-modal-cart.css
+++ b/css/header-section-modal-cart.css
@@ -28,6 +28,7 @@ body.lock {
   visibility: hidden;
   overflow-y: auto;
   overflow-x: hidden;
+  z-index: 20;
 }
 .modal-cart.open {
   opacity: 1;
