--- a/css/footer.css
+++ b/css/footer.css
@@ -251,23 +251,23 @@ input {
 }
 
 .menu__footer {
-  display: grid;
-  grid-template-columns: repeat(5, 2fr);
-  grid-auto-rows: 150px;
-  padding-top: 70px;
-  padding-left: 110px;
+  display: grid !important;
+  grid-template-columns: repeat(5, 2fr) !important;
+  grid-auto-rows: 150px !important;
+  padding-top: 70px !important;
+  padding-left: 110px !important;
   font-family: PT Sans, sans-serif;
   color: #fff;
-  list-style-type: none;
+  list-style-type: none !important;
 }
 
 .social_menu {
-  list-style-type: none;
-  margin-left: -30px;
-  text-decoration: none;
-  color: #fff;
+  list-style-type: none !important;
+  margin-left: -30px !important;
+  text-decoration: none !important;
+  color: #fff !important;
   cursor: pointer;
-  line-height: 2;
+  line-height: 2 !important;
 }
 .social_menu:hover a {
   text-decoration: underline;
@@ -285,11 +285,6 @@ div ul.social_menu a {
   width: 30px;
 }
 
-.dash_footer {
-  border-bottom: 3px solid rgb(48, 48, 48);
-  padding-top: 120px;
-  width: 1300px;
-}
 
 .created_by {
   padding-top: 15px;
