--- a/css/speakers-and-video.css
+++ b/css/speakers-and-video.css
@@ -38,7 +38,7 @@ display: grid;
     justify-content: space-around;
     margin-bottom: 10px;
 }
-.products{
+.speakers-products{
     display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         grid-gap: 5px;
