--- a/css/footer.css
+++ b/css/footer.css
@@ -287,10 +287,10 @@ div ul.social_menu a {
 
 
 .created_by {
-  padding-top: 15px;
+  padding-top: 100px;
   padding-left: 100px;
   padding-bottom: 30px;
-  font-family: sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #fff;
   font-weight: 200;
   font-size: 15px;
