--- a/css/reviews-and-news.css
+++ b/css/reviews-and-news.css
@@ -2,9 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;700;900&display=swap");
 
 
-  .cards-container {
-    display: flex;
-    }
+ 
    
  .title-our-customer-say> h2
  {
@@ -81,10 +79,17 @@
   
   
 }
-.cards-container{
+.brand-logos {
   background-color: rgb(241, 235, 235);
+}
+.cards-container{
+
   padding-top: 30px;
   padding-bottom: 20px;
+ margin: auto;
+ max-width: 1200px;
+ display: flex;
+
 }
 .subtitle-customer-say> p
 {
@@ -293,8 +298,7 @@ text-align: center;
   max-width: 350px;
 }
 .articles-container{
-  margin-left: 330px;
-  margin-right: 300px;
+  
   display: flex;
   
   
@@ -392,4 +396,9 @@ margin-top: 30px;
   padding: 10px 0;
   
 }
+.articles-container {
+  max-width: 1200px;
+  margin: auto;
+}
+
 
