--- a/css/reviews-and-news.css
+++ b/css/reviews-and-news.css
@@ -7,15 +7,14 @@
  .title-our-customer-say> h2
  {
    text-align: center;
-   margin-top: 30px;
-   margin-bottom: 30px;
+   
  }
 .logo-main{
   object-position: center;
   
 }
 #logoall{
-  width: 190px;
+  width: 240px;
   border: solid;
   border-top-width: 30px;
   border-width: 30px;
@@ -25,7 +24,7 @@
   margin-right: 18px;
 }
 #logoalla{
-  width: 190px;
+  width: 240px;
   border: solid;
   border-top-width: 30px;
   border-width: 30px;
@@ -34,10 +33,11 @@
   background-color: white;
   margin-right: 18px;
   
+  
 }
 
 #logoalls{
-  width: 190px;
+  width: 240px;
   border: solid;
   border-top-width: 30px;
   border-width: 30px;
@@ -47,7 +47,7 @@
   margin-right: 18px;
 }
 #logoallsen{
-  width: 190px;
+  width: 240px;
   border: solid;
   border-top-width: 30px;
   border-width: 30px;
@@ -57,7 +57,7 @@
   margin-right: 18px;
 }
 #logoallm{
-  width: 190px;
+  width: 240px;
   border: solid;
   border-top-width: 30px;
   border-width: 30px;
@@ -68,7 +68,7 @@
   
 }
 #logoallj{
-  width: 120px;
+  width: 170px;
   border: solid;
   border-top-width: 30px;
   border-width: 30px;
@@ -81,30 +81,26 @@
 }
 .brand-logos {
   background-color: rgb(241, 235, 235);
+  display: flex;
+ 
 }
 .cards-container{
-
+  display: flex;
   padding-top: 30px;
-  padding-bottom: 20px;
- margin: auto;
- max-width: 1200px;
- display: flex;
-
+  padding-bottom: 10px;
+max-width: 1200px;
 }
+
 .subtitle-customer-say> p
 {
 text-align: center;
+margin-bottom: 20px;
 }
 #logo-main
 {
   margin-top: 40px;
   margin: auto;
   width: 40px;
-}
-#logo-main2{
-  margin-top: 20px;
-  width: 40px;
-  object-position: center;
 }
 .subtitle-customer-say> p{
   margin-top: 30px;
@@ -122,14 +118,20 @@ text-align: center;
   text-align: center;
   color: blue;
   font-size: 17px; 
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-weight: 700;
 }
 .text1> p{
   text-align: center;
+  
+  
 }
 .date1> h4{
   text-align: center;
   color: coral;
   font-size: 10px; 
+  font-weight: 700;
 }
 
 #person2
@@ -145,6 +147,9 @@ text-align: center;
   text-align: center;
   color: blue;
   font-size: 17px; 
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-weight: 700;
 }
 .text2> p{
   text-align: center;
@@ -153,6 +158,7 @@ text-align: center;
   text-align: center;
   color: coral;
   font-size: 10px; 
+  font-weight: 700;
 }
 #person3
 {
@@ -166,6 +172,9 @@ text-align: center;
   text-align: center;
   color: blue;
   font-size: 17px; 
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-weight: 700;
 }
 .text3> p{
   text-align: center;
@@ -174,9 +183,12 @@ text-align: center;
   text-align: center;
   color: coral;
   font-size: 10px; 
+  font-weight: 700;
 }
 .popular-article{
   text-align: center;
+ 
+  
 }
 #logo-main2
 {
@@ -279,7 +291,7 @@ text-align: center;
 }
 .person{
   text-align: center;
-  max-width:400px;
+  max-width:700px;
   margin: auto;
 }
 .News{
@@ -300,6 +312,9 @@ text-align: center;
 .articles-container{
   
   display: flex;
+  max-width: 1200px;
+  margin: auto;
+  
   
   
 }
@@ -319,7 +334,7 @@ text-align: center;
 }
 .title-our-customer-say> h2{
   font-weight: 900;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 .name-article1{
   font-size: 14px;
@@ -400,5 +415,22 @@ margin-top: 30px;
   max-width: 1200px;
   margin: auto;
 }
-
-
+.person {
+  display: flex;
+  margin-bottom: 60px;
+  
+}
+.btn-slide-prev {
+margin-top: 100px;
+}
+.btn-slide-next {
+  margin-top: 100px;
+}
+#slide-p {
+  margin-top: 60px;
+  margin-right: 10px;
+}
+#slide-n {
+  margin-top: 60px;
+  margin-left: 787px;
+}
